@@ -91,9 +91,6 @@ class sdist(Command):
     negative_opt = {'no-defaults': 'use-defaults',
                     'no-prune': 'prune' }
 
-    default_format = {'posix': 'gztar',
-                      'nt': 'zip' }
-
     sub_commands = [('check', checking_metadata)]
 
     def initialize_options(self):
@@ -110,7 +107,7 @@ class sdist(Command):
         self.manifest_only = 0
         self.force_manifest = 0
 
-        self.formats = None
+        self.formats = ['gztar']
         self.keep_temp = 0
         self.dist_dir = None
 
@@ -126,13 +123,6 @@ class sdist(Command):
             self.template = "MANIFEST.in"
 
         self.ensure_string_list('formats')
-        if self.formats is None:
-            try:
-                self.formats = [self.default_format[os.name]]
-            except KeyError:
-                raise DistutilsPlatformError(
-                      "don't know how to create source distributions "
-                      "on platform %s" % os.name)
 
         bad_format = archive_util.check_archive_formats(self.formats)
         if bad_format:
