@@ -20,6 +20,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #27819: In distutils sdists, simply produce the "gztar" (gzipped tar
+  format) distributions on all platforms unless "formats" is supplied.
+
 - Issue #2466: posixpath.ismount now correctly recognizes mount points which
   the user does not have permission to access.
 
